# darknet

examples/: detector.c
include/: darknet.h
src/: CMakeLists.txt  box.h  compare.c  cuda.c  cuda.h  data.c  data.h  deconvolutional_layer.c  deconvolutional_layer.h  demo.c  detection_layer.h  detector.c  detector_wrapper.cpp  detector_wrapper.h  image.c  image.h  list.h  network.c  network.h  parser.c  parser.h  region_layer.c  utils.c
